added big weather icon

--- a/index.html
+++ b/index.html
@@ -50,5 +50,13 @@
               >
                 🔎
               </button>
+            </div>
+          </form>
+           <img
+            src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/cloudy.svg"
+            alt="weather icon"
+            width="150px"
+            id="weather-icon"
+          />
   </body>
 </html>
