added weekly forecast

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-       <div class="container">
+    <div class="container">
       <div class="row">
         <div class="col-6">
           <h1 id="user-city">London</h1>
@@ -52,11 +52,102 @@
               </button>
             </div>
           </form>
-           <img
+          <img
             src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/cloudy.svg"
             alt="weather icon"
             width="150px"
             id="weather-icon"
           />
+          <br />
+          <div>
+            <p id="weatherDescription">Mostly Clear</p>
+          </div>
+        </div>
+      </div>
+      <section class="details">
+        <div class="row">
+          <div class="col-6">
+            <p>Humidity: <span id="humidity">54</span>%</p>
+          </div>
+          <div class="col-6">
+            <p>Wind: <span id="wind">18 </span>km/h</p>
+          </div>
+        </div>
+      </section>
+      <br />
+      <div class="row" id="weekdays">
+        <div class="col-2">
+          <p>Tue</p>
+          <span>
+            <img
+              src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/rainy.svg"
+              alt="rain"
+              width="40px"
+          /></span>
+          <br />
+          <span><strong>15°</strong> 8°</span>
+        </div>
+        <div class="col-2">
+          <p>Wed</p>
+          <span>
+            <img
+              src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/storm.svg"
+              alt="cloudy"
+              width="40px"
+            />
+          </span>
+          <br />
+          <span><strong>16°</strong> 8°</span>
+        </div>
+        <div class="col-2">
+          <p>Thur</p>
+          <span>
+            <img
+              src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/rainy.svg"
+              alt="rainy"
+              width="40px"
+            />
+          </span>
+          <br />
+          <span><strong>17°</strong> 8°</span>
+        </div>
+        <div class="col-2">
+          <p>Fri</p>
+          <span>
+            <img
+              src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/rainy.svg"
+              alt="rainy"
+              width="40px"
+            />
+          </span>
+          <br />
+          <span><strong>16°</strong> 9°</span>
+        </div>
+        <div class="col-2">
+          <p>Sat</p>
+          <span>
+            <img
+              src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/rainy.svg"
+              alt="rainy"
+              width="40px"
+            />
+          </span>
+          <br />
+          <span><strong>16°</strong> 8°</span>
+        </div>
+        <div class="col-2">
+          <p>Sun</p>
+          <span>
+            <img
+              src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/weather/rainy.svg"
+              alt="rainy"
+              width="40px"
+            />
+          </span>
+          <br />
+          <span><strong>17°</strong> 9°</span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
