--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
               >
                 🔎
               </button>
+              <button
+                type="button"
+                class="btn btn-success btn-sm"
+                id="current-location"
+              >
+                🏠
+              </button>
             </div>
           </form>
           <img
