--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
         </div>
       </div>
     </div>
+    <p>
+      <a href="https://github.com/Deni-ux/weather-app">Open-sourced</a> by
+      Denisa Haka
+    </p>
+
     <script src="script.js"></script>
   </body>
 </html>
