--- a/index.html
+++ b/index.html
@@ -157,11 +157,10 @@
         </div>
       </div>
     </div>
-    <p>
+    <p class="opensourceLink">
       <a href="https://github.com/Deni-ux/weather-app">Open-sourced</a> by
       Denisa Haka
     </p>
-
     <script src="script.js"></script>
   </body>
 </html>
